# chpsim

./: Makefile.am  Makefile.in  ProjectHome.md  README  builtin-2.0.chp  builtin.chp  builtin_io.c  builtin_io.h  channel.chp  chp.c  chp.h  chpconv.c  chpsim.c  config.h  config.h.in  configure  configure.ac  exec.c  exec.h  expr.c  expr.h  ifrchk.c  ifrchk.h  interact.c  interact.h  lex.c  lex.h  modules.c  modules.h  parse.c  parse.h  parse_obj.c  parse_obj.h  path.def  print.c  print.h  properties.c  properties.h  routines.c  routines.h  (+12 more)
.deps/: builtin_io.Po  chp.Po  chpsim.Po  exec.Po  expr.Po  interact.Po  lex.Po  modules.Po  parse.Po  parse_obj.Po  print.Po  routines.Po  sem_analysis.Po  statement.Po  types.Po  value.Po  variables.Po
clib/: COPYING  Makefile.am  Makefile.in  ascii.h  c_exception.c  c_exception.h  errormsg.c  errormsg.h  fifo.c  fifo.h  hash.c  hash.h  llist.c  llist.h  mallocdbg.c  mallocdbg.h  obj.c  obj.h  pqueue.c  pqueue.h  standard.h  string_table.c  string_table.h  var_string.c  var_string.h
doc/: chpsim.aux  chpsim.tex  chpsim.toc  cover.tex  demo1.chp  language.tex  simulation.tex  start.tex
test/: test.sh
test/chpsim_debug/: 2darray1.chp  break01.chp  break02.chp  break03.chp  break04.chp  cap1.chp  check_01.chp  check_02.chp  check_03.chp  check_04.chp  check_05.chp  check_06.chp  check_07.chp  check_08.chp  check_09.chp  check_10.chp  check_11.chp  constwire01.chp  crit01.chp  crit02.chp  crit03.chp  crit04.chp  crit05.chp  deadlock01.chp  deadlock02.chp  deadlock03.chp  disconn01.chp  hide_01.chp  hide_02.chp  hide_03.chp  hide_04.chp  hide_05.chp  hide_06.chp  hse_fanout_01.chp  initwire01.chp  meta1.chp  meta2.chp  meta3.chp  meta4.chp  meta5.chp  (+32 more)
test/chpsim_debug/.logs/2darray1.chp/: err  out
test/chpsim_debug/.logs/break01.chp/: out
test/chpsim_debug/.logs/break02.chp/: out
test/chpsim_debug/.logs/break03.chp/: out
test/chpsim_debug/.logs/break04.chp/: out
test/chpsim_debug/.logs/cap1.chp/: out
test/chpsim_debug/.logs/check_01.chp/: out
test/chpsim_debug/.logs/check_02.chp/: out
test/chpsim_debug/.logs/check_03.chp/: out
test/chpsim_debug/.logs/check_04.chp/: out
test/chpsim_debug/.logs/check_05.chp/: out
test/chpsim_debug/.logs/check_06.chp/: out
test/chpsim_debug/.logs/check_07.chp/: out
test/chpsim_general/: array.chp  array_split1.chp  array_split2.chp  array_split3.chp  array_split4.chp  array_subrange.chp  arraywired.chp  badconn01.chp  badconn02.chp  baddecomp1.chp  badinst.chp  badunion1.chp  bitport1.chp  bitport2.chp  bitport3.chp  bitport4.chp  comm1.chp  comm2.chp  comm3.chp  comm4.chp  comm5.chp  conn_meta01.chp  const1.chp  constwire01.chp  constwire02.chp  constwire03.chp  constwire04.chp  constwire05.chp  dupsym.chp  hide_01.chp  hide_02.chp  hse_01.chp  hse_02.chp  index1.chp  index2.chp  init1.chp  init2.chp  init3.chp  int_sub.chp  int_sub2.chp  (+98 more)
test/chpsim_opt/: hse_timed_01.chp  hse_timed_02.chp  hse_timed_03.chp  hse_timed_04.chp  mem_timed_01.chp  nohide_01.chp  prop_timed_01.chp  prs_timed_01.chp  prs_timed_02.chp  prs_timed_03.chp  prs_timed_04.chp  sbadport1.chp  sbadport2.chp  sbadvar2.chp  sbadvar5.chp  sbadvar6.chp  sbadvar7.chp  sgoodport1.chp  sgoodvar1.chp  sgoodvar2.chp  sgoodvar5.chp  smdarray.chp  test.sh
(+269 files in other folders)
