## Process this file with automake to produce Makefile.in
noinst_LIBRARIES = libalways.a
libalways_a_SOURCES = c_exception.c errormsg.c hash.c llist.c mallocdbg.c \
                      obj.c pqueue.c string_table.c var_string.c ascii.h \
                      c_exception.h errormsg.h hash.h llist.h mallocdbg.h \
                      obj.h pqueue.h standard.h string_table.h var_string.h \
                      fifo.c fifo.h
